# macaroons-rs

./: .travis.yml  CHANGES.md  Cargo.toml  LICENSE  README.md
src/: caveat.rs  error.rs  lib.rs  token.rs  v1.rs  verifier.rs
src/macaroons/: builder.rs  token.rs
src/v1/: token.rs
tests/: lib.rs
