[package]
name        = "macaroons"
description = "Cookie-like bearer credentials with caveats for distributed authorization"
homepage    = "https://github.com/cryptosphere/macaroons-rs"
repository  = "https://github.com/cryptosphere/macaroons-rs.git"
readme      = "README.md"
keywords    = ["cookies", "authorization", "credentials"]
categories  = ["authentication"]
license     = "MIT"
version     = "0.3.1"
authors     = ["Tony Arcieri <bascule@gmail.com>"]

[features]
nightly = []

[dependencies]
sodiumoxide     = ">= 0.0.10"
libsodium-sys   = ">= 0.0.10"
rustc-serialize = ">= 0.3.19"
